# hub-dp-metadata

./: .env.example  .gitignore  CHARTS.md  README.md  config.credentials.json.example  docker-compose.yml
apps/docgen-sql/: .gitignore  INSTALL.md  README.md  docker-compose.yml  pyproject.toml  requirements-web.txt  setup.cfg
apps/docgen-sql/config/: cd_cap_maestra_cuentas.yml  cd_cap_portafolio_cuentas_activas.yml  llm.yml  supabase.yml
apps/docgen-sql/sql/: dashboard_mocks.sql
apps/docgen-sql/src/: __init__.py  audit.py  config.py  credentials.py  datacontract_exporter.py  doctor.py  document.py  document_models.py  document_renderer.py  duckdb_ui.py  duckdb_ui_server.py  export_datacontract.py  export_entropy_bundle.py  import_entropy.py  models.py  pipeline_diagram.py  run_pipeline.py  run_repository.py  runtime_paths.py  serve_web.py  sql_business_context.py  sql_parser.py  supabase_table_client.py  sync_entropy_registry.py  sync_modules.py  sync_variables.py  web_api.py  web_models.py  web_service.py
apps/docgen-sql/supabase/: config.toml
apps/docgen-sql/tests/: test_audit.py  test_config.py  test_datacontract_exporter.py  test_doctor.py  test_duckdb_ui.py  test_entropy_bundle_exporter.py  test_import_entropy.py  test_pipeline.py  test_pipeline_diagram.py  test_run_repository.py  test_runtime_paths.py  test_sql_business_context.py  test_sql_parser.py  test_sync_entropy_registry.py  test_sync_modules.py  test_variable_sync.py  test_web_api.py  test_web_service.py
apps/docgen-sql/web/: index.html  package-lock.json  package.json  vite.config.js
(+56 files in other folders)
