[metadata]
name = docgen-sql
version = 0.1.0
description = Generador de especificaciones funcionales a partir de SQL.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.9
install_requires =
    PyYAML>=6.0,<7.0
    pydantic>=2.7,<3.0
    python-docx>=1.1,<2.0
    openpyxl>=3.1,<4.0
    sqlglot>=25.0,<26.0
    sqlparse>=0.5,<1.0
    openai>=1.0,<2.0

[options.packages.find]
include =
    src
    src.*

[options.extras_require]
web =
    fastapi>=0.115,<1.0
    uvicorn>=0.32,<1.0
    duckdb>=1.1,<2.0
dev =
    pytest>=8.0,<9.0

[options.entry_points]
console_scripts =
    docgen-sql-run = src.run_pipeline:main
    docgen-sql-sync-variables = src.sync_variables:main
    docgen-sql-sync-modules = src.sync_modules:main
    docgen-sql-export-datacontract = src.export_datacontract:main
    docgen-sql-export-entropy-bundle = src.export_entropy_bundle:main
    docgen-sql-import-entropy = src.import_entropy:main
    docgen-sql-sync-entropy-registry = src.sync_entropy_registry:main
    docgen-sql-serve-web = src.serve_web:main
    docgen-sql-doctor = src.doctor:main
